{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 210,
  "lineage": "7a5a7ced-f441-a90d-2147-1e8ff3e1adf4",
  "resources": [
    {
      "module": "module.db_tier",
      "mode": "managed",
      "type": "aws_instance",
      "name": "DB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-097a1923bb6d9c21d",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-08503b47a1fa59f89",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08503b47a1fa59f89",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-008e82f60143ac615",
            "private_dns": "ip-23-0-2-248.eu-west-1.compute.internal",
            "private_ip": "23.0.2.248",
            "public_ip": "34.243.252.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07acac93ef38f83e3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b4c1ce0e84938e9",
            "tags": {
              "Name": "Eng57.Samir.D.tf.db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0441b0918e6e683aa"
            ]
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "module.app_tier.aws_security_group.sgapp",
            "module.db_tier.aws_security_group.sgdb",
            "module.db_tier.aws_subnet.subprivate"
          ]
        }
      ]
    },
    {
      "module": "module.app_tier",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d12d0d033de9d75d",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0432d55e68ca50356",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0432d55e68ca50356",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a9a1a3408ddebce0",
            "private_dns": "ip-23-0-1-215.eu-west-1.compute.internal",
            "private_ip": "23.0.1.215",
            "public_ip": "176.34.165.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fd0068a03be356bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07cb6f72c70569cc7",
            "tags": {
              "Name": "Eng57.Samir.D.tf.app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00d6deff7a85b7915"
            ]
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "module.app_tier.aws_security_group.sgapp",
            "module.app_tier.aws_subnet.subpublic",
            "module.db_tier.aws_instance.DB",
            "module.db_tier.aws_security_group.sgdb",
            "module.db_tier.aws_subnet.subprivate"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-0be9ddb3a86a8b719",
            "id": "igw-0be9ddb3a86a8b719",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng57.Samir.D. igw"
            },
            "vpc_id": "vpc-0712cc549802dab28"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.db_tier",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "naclprivate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-02e1f08a809400757",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-02e1f08a809400757",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "23.0.1.0/24",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 27017
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-02b4c1ce0e84938e9"
            ],
            "tags": {
              "Name": "Eng57.Samir.D.nacls.private"
            },
            "vpc_id": "vpc-0712cc549802dab28"
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "module.app_tier.aws_subnet.subpublic",
            "module.db_tier.aws_subnet.subprivate"
          ]
        }
      ]
    },
    {
      "module": "module.app_tier",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "naclpublic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-0462e7930369cb9a0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0462e7930369cb9a0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "81.145.249.55/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 22
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-07cb6f72c70569cc7"
            ],
            "tags": {
              "Name": "Eng57.Samir.D.nacls.public"
            },
            "vpc_id": "vpc-0712cc549802dab28"
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "module.app_tier.aws_subnet.subpublic"
          ]
        }
      ]
    },
    {
      "module": "module.app_tier",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routepublic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c1d367c8724b5644",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0be9ddb3a86a8b719",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng57.Samir.D.route.public"
            },
            "vpc_id": "vpc-0712cc549802dab28"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app_tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeapp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9a0cc077e8e36c5",
            "route_table_id": "rtb-0c1d367c8724b5644",
            "subnet_id": "subnet-07cb6f72c70569cc7"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.mainvpc",
            "module.app_tier.aws_route_table.routepublic",
            "module.app_tier.aws_subnet.subpublic"
          ]
        }
      ]
    },
    {
      "module": "module.app_tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgapp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-00d6deff7a85b7915",
            "description": "Allow http and https traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d6deff7a85b7915",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "httpx from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "httpx from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "81.145.249.55/32"
                ],
                "description": "httpx from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app-sg",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng57.Samir.D.sg.app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0712cc549802dab28"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.db_tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgdb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0441b0918e6e683aa",
            "description": "Allow http and https traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0441b0918e6e683aa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "https from VPC",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00d6deff7a85b7915"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "db-sg",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng57.Samir.D.sg.db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0712cc549802dab28"
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "module.app_tier.aws_security_group.sgapp"
          ]
        }
      ]
    },
    {
      "module": "module.db_tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subprivate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-02b4c1ce0e84938e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "23.0.2.0/24",
            "id": "subnet-02b4c1ce0e84938e9",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng57.Samir.D.sub.private"
            },
            "vpc_id": "vpc-0712cc549802dab28"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app_tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subpublic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-07cb6f72c70569cc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "23.0.1.0/24",
            "id": "subnet-07cb6f72c70569cc7",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng57.Samir.D.sub.public"
            },
            "vpc_id": "vpc-0712cc549802dab28"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0712cc549802dab28",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "23.0.0.0/16",
            "default_network_acl_id": "acl-097872e632266388c",
            "default_route_table_id": "rtb-0568f2c25185e95ff",
            "default_security_group_id": "sg-0a31d28a34a8b96bd",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0712cc549802dab28",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0568f2c25185e95ff",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng57.Samir.D.tf.vpc"
            }
          }
        }
      ]
    }
  ]
}